Added text box and related CSS.

--- a/punned.html
+++ b/punned.html
@@ -12,9 +12,10 @@
 <html>
 	<body>
 		<h1>Pun someone!</h1>
-		<div style="color:gray;">Write or paste the text of your email</div>
+		<div style="color:gray;">
+			<input placeholder="Write or paste the text of your email" type="text"/></div>
 		<p>Now, choose your pun</p>
-			<div style="background-color:pink">tech puns</div>
+			<div style="background-color:#00FF00">tech puns</div>
 			<div style="background-color:orange;">cat puns</div>
 			<div style="background-color:yellow;">sex puns</div>
 			<div style="background-color:violet;">fish puns</div>
